# Block_Dude

./: 2021li1g117.cabal  README.md  docs.txt  documentation.txt  errors-T1.txt  errors-T2.txt  errors-T3.txt  errors-T4.txt  errors.txt  results-T1.txt  results-T2.txt  results-T3.txt  results-T4.txt  results.txt
src/: Mapa.hs  Tarefa1_2021li1g117.hs  Tarefa2_2021li1g117.hs  Tarefa3_2021li1g117.hs  Tarefa4_2021li1g117.hs  Tarefa5_2021li1g117.hs  Tarefa6_2021li1g117.hs
tests/: Fase1.hs  Tarefa1_2021li1g117_Spec.hs  Tarefa2_2021li1g117_Spec.hs  Tarefa3_2021li1g117_Spec.hs  Tarefa4_2021li1g117_Spec.hs  Tests.hs
